Do not do InvalidateClick on MouseMove

In this CL, we change reset mouse states in mouse move to
not do MouseReleaseEventUpdateStates, but only ClearDragHeuristicState.
The reason is:
1. click_count_ & click_element_ are set from WebMouseEvent on mousePress.
It won't be incorrect even if we do not receive the MouseUp.
2. On Mac(with software like BBT that trap events), event queue might
got incorrect: a MouseMove with no button down is received&handled
before MouseUp. Therefore click event will not fire since we did the
InvalidateClick() on MouseMove.

This fix won't break crbug.com/527582

Bug: 763642
Change-Id: Ic278412281ba177a23b1a5fffeaa62ae123cc71d
Reviewed-on: https://chromium-review.googlesource.com/726962
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510073}
Former-commit-id: 0ffd0bb18932f2d2002218c939c3e34e13cde04e